--- a/spam_identify.ipynb
+++ b/spam_identify.ipynb
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "b204caa1",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Message: 'Boss says there is going to be a pizza party tonight. Free pizza, please call me as soon as you are available to confirm wether you are comning or not' → Prediction: ham\n"
+      "Enter a message you would like to check if spam or not:  just by investing $1 you can get a chance to win a car\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Message: 'just by investing $1 you can get a chance to win a car' → Prediction: spam\n"
      ]
     }
    ],
@@ -231,25 +238,21 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40476e9b-68c9-4ac9-863a-d54a364dcfb9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.11"
   }
  },
  "nbformat": 4,
